deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubernate-communicate
  name: kubernate-communicate
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 45
  selector:
    matchLabels:
      app: kubernate-communicate
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubernate-communicate
    spec:
      containers:
      - image: aniketharode/kubernatescommunication:0.0.6-SNAPSHOT #CHANGE
        imagePullPolicy: IfNotPresent
        name: kubernate-communicate
#        env: //CHANGE
#          - name: CURRENCY_EXCHANGE_URI
#            value: http://currency-exchange
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: kubernate-communicate
  name: kubernate-communicate
  namespace: default
spec:
  ports:
  - nodePort: 30701 
    port: 8100 
    protocol: TCP
    #targetPort: 8100 
  selector:
    app: kubernate-communicate
  sessionAffinity: None 
  type: NodePort
