ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: kubernate-communicate
            port:
              number: 8100
    - http:
        paths:
        - path: /ecb-service
          pathType: Prefix
          backend:
            service:
              name: ecb-service
              port:
                number: 8080
